<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index"
        android:textColor="@android:color/black"
        android:fontFamily="@font/ubuntu_reg"
        android:id="@+id/itemIndex"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemName"
        android:textColor="@android:color/black"
        android:fontFamily="@font/ubuntu_reg"
        android:layout_toEndOf="@id/itemIndex"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@android:color/black"
        android:fontFamily="@font/ubuntu_reg"

        android:layout_alignParentEnd="true"/>
</RelativeLayout>