<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center">
<!--        Here We Will Add The Name Of Shop in Bold Font-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/shop_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/linear_bg_dotted"
                android:src="@drawable/linear_bg_dotted" />
        </LinearLayout>
<!--        Here We Will Provide The Info About The Shop-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"
                android:text="@string/address1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"
                android:text="@string/landmark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"
                android:text="@string/stateZIP"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/linear_bg_dotted"
                android:src="@drawable/linear_bg_dotted" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="italic"
                    android:fontFamily="@font/ubuntu_italic"
                    android:text="@string/partyName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textStyle="italic"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/ubuntu_italic"
                    android:text="@string/invoice_id"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textStyle="italic"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/ubuntu_italic"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="italic"
                    android:fontFamily="@font/ubuntu_italic"
                    android:text="@string/phoneNo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textStyle="italic"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/ubuntu_italic"
                    android:text="User:Admin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textStyle="italic"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/ubuntu_italic"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/linear_bg_dotted"
                android:src="@drawable/linear_bg_dotted" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/items_list"
            tools:itemCount="5"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:padding="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTotal"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gst"
                android:textStyle="italic"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:background="@drawable/linear_bg_dotted"
                    android:src="@drawable/linear_bg_dotted" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:background="@drawable/linear_bg_dotted"
                    android:src="@drawable/linear_bg_dotted" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amountDue"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paymentMethod"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subPrice"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:background="@drawable/linear_bg_dotted"
                    android:src="@drawable/linear_bg_dotted" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:background="@drawable/linear_bg_dotted"
                    android:src="@drawable/linear_bg_dotted" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changeAmount"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ubuntu_reg"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@drawable/linear_bg_dotted"
                android:src="@drawable/linear_bg_dotted" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_italic"
                android:textColor="@android:color/black"
                android:text="@string/thanksFooter"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@drawable/linear_bg_dotted"
                android:src="@drawable/linear_bg_dotted" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>